deploy/ocp/ns-sudoku.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: Sudoku
  name: sudoku
