deploy/ocp/dc-app.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: app
    deploymentconfig: app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: app
        deploymentconfig: app
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - env:
        - name: REACT_APP_SUDOKU_URL_SVC
          value: https://svc-sudoku.apps.ocp4.home.glroland.com
        - name: REACT_APP_SUDOKU_URL_OCRSVC
          value: https://ocr-svc-sudoku.apps.ocp4.home.glroland.com
        - name: NODE_TLS_REJECT_UNAUTHORIZED
          value: "0"
        image: app:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - app
      from:
        kind: ImageStreamTag
        name: app:latest
    type: ImageChange
  - type: ConfigChange
