deploy/ocp/dc-ocr-svc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ocr-svc
  name: ocr-svc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ocr-svc
    deploymentconfig: ocr-svc
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: ocr-svc
        deploymentconfig: ocr-svc
    spec:
      containers:
      - image: ocr-svc:latest
        imagePullPolicy: Always
        name: ocr-svc
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - ocr-svc
      from:
        kind: ImageStreamTag
        name: ocr-svc:latest
    type: ImageChange
  - type: ConfigChange
