deploy/ocp/dc-svc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: svc
  name: svc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: svc
    deploymentconfig: svc
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: svc
        deploymentconfig: svc
    spec:
      containers:
      - image: svc:latest
        imagePullPolicy: Always
        name: svc
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - svc
      from:
        kind: ImageStreamTag
        name: svc:latest
    type: ImageChange
  - type: ConfigChange
