deploy/ocp/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: app
    deploymentconfig: app
  sessionAffinity: None
  type: ClusterIP
