deploy/ocp/service-ocr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocr-svc
  name: ocr-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ocr-svc
  sessionAffinity: None
  type: ClusterIP
