deploy/ocp/route-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app
  name: app
spec:
  port:
    targetPort: 8080-tcp
  subdomain: ""
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEKzCCAxOgAwIBAgIUEbl6frxrwvK2aEo0LuyQT2Q2jfEwDQYJKoZIhvcNAQEF
[...]
      l3P4OkjQvGvLF7635AnT
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAwTGlF2BWus7AhcyGLO1uFgX2jtBdn5/hVPTCxxBg1x8d1fj9
[...]
      leM16XtkRXO/roZKVZaRjF5nF4UG5tbsplAWgr4Evn607zxIKDgVKA==
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: app
    weight: 100
  wildcardPolicy: None
